--- a/frontend-client/chess-game-client/package.json
+++ b/frontend-client/chess-game-client/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "lucide-react": "^0.487.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
+    "react-router": "^7.4.1",
+    "react-router-dom": "^7.4.1",
+    "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.8.1",
+    "three": "^0.175.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
